src/test/deca/context/invalid/decl_var_void_in_main.deca
// Test la règle 3.17: une variable est de type void dans main

{
    void x = 12;
}

// Resultat:
//# src/test/deca/context/invalid/decl_var_void_in_main.deca:5:13: Type can't be void : rule 3.17
